deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: a-project
  labels:
    app.kubernetes.io/managed-by: kubectl
