deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-retry-fun
  namespace: ns-regular
spec:
  type: ClusterIP
  selector:
    app: grpc-retry-fun
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
